tests/baselines/reference/conditionalExpressionNewLine9.errors.txt
conditionalExpressionNewLine9.ts(1,9): error TS2304: Cannot find name 'a'.
conditionalExpressionNewLine9.ts(2,5): error TS2304: Cannot find name 'b'.
conditionalExpressionNewLine9.ts(3,7): error TS2304: Cannot find name 'd'.
conditionalExpressionNewLine9.ts(3,11): error TS2304: Cannot find name 'e'.
conditionalExpressionNewLine9.ts(4,5): error TS2304: Cannot find name 'c'.
conditionalExpressionNewLine9.ts(5,7): error TS2304: Cannot find name 'f'.
conditionalExpressionNewLine9.ts(5,11): error TS2304: Cannot find name 'g'.


==== conditionalExpressionNewLine9.ts (7 errors) ====
    var v = a 
            ~
!!! error TS2304: Cannot find name 'a'.
      ? b
        ~
!!! error TS2304: Cannot find name 'b'.
        ? d : e
          ~
!!! error TS2304: Cannot find name 'd'.
              ~
!!! error TS2304: Cannot find name 'e'.
      : c
        ~
!!! error TS2304: Cannot find name 'c'.
        ? f : g;
          ~
!!! error TS2304: Cannot find name 'f'.
              ~
!!! error TS2304: Cannot find name 'g'.